ch.3 - added explanation why there are IInterfaces througout codebase that are actually abstract classes

--- a/cs/kap03.tex
+++ b/cs/kap03.tex
@@ -46,7 +46,7 @@ Jakoukoliv proměnnou, která je deklarovaná jako public či anotovaná atribut
 \end{itemize}
 Dalším omezením je, že musí jít vždy o proměnné - properties podporovány nejsou.
 
-Tato omezení - především nemožnost používat interfacy a properties\footnote{Nepodporu složitějších datových struktur lze napravit použitím pokročilých technik pro vytváření vlastních editorových oken. Nepodpora generik pak činí problém spíše jen u sealed typů a structů, ze kterých není možné odvodit negenerického potomka.} - mohou programátorovi značně ztížit snahy o dodržování dobrých praktik objektového programování.
+Tato omezení - především nemožnost používat interfacy a properties\footnote{Nepodporu složitějších datových struktur lze kompenzovat použitím pokročilých technik pro vytváření vlastních editorových oken. Nepodpora generik pak činí problém spíše jen u sealed typů a structů, ze kterých není možné odvodit negenerického potomka.} - mohou programátorovi značně ztížit snahy o dodržování dobrých praktik objektového programování\footnote{Důsledkem této limitace je, že napříč naší codebase čtenář narazí na mnoho typů, které používají standardní jmennou konvenci ITypeName - s cílem komunikovat záměr, že myšlenkově plní roli rozhraní - avšak jsou implementovány jako abstraktní třída (mnohdy odvozená z UnityEngine.MonoBehavior).}.
 
 Důvodem je, že tato úprava polí v editoru je specielním případem použití \textbf{standardního serializačního subsystému} enginu Unity. Na ten narazíme kdekoliv, kde je třeba interně ukládat herní stav do podoby, ze které bude možné jej později rekonstruovat. Mimo jiné je rovněž zodpovědný za to, aby ve finální sestavené verzi hry bylo načítání scény pro hráče co nejrychlejší. Je tedy jen přirozené, že je koncipován především pro co možná nejvyšší výkon - z čehož plynou výše zmíněná omezení.
 
