added reference to csquotes package -> build no longer crashes on my laptop

--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -40,6 +40,9 @@
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
 
+\usepackage{csquotes} % bez tohoto package crashuje build 
+
+
 %% Použité kódování znaků: obvykle latin2, cp1250 nebo utf8:
 \usepackage[utf8]{inputenc}
 
