--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -213,7 +213,7 @@ Slabší stránkou řešení, které jsme si právě představili, jsou možnost
 
 \begin{itemize}
     \item %ovládání střílením paprsku, který se protne s kulovou plochou jsme naimplementovali
-        \begin{itemize 
+        \begin{itemize}
             \item díky tomuhle jsme schopní hráči poskytnout průnikový tvar, co se pro něj tváří jako normální, intuitivní kulová plocha, ale proti ní zde máme spoustu dodatečné flexibility, která nám umožní vychytat okrajové případy
             \item pomocí tohohle se dají poskládat dost komplexní útvary, co se pořád tváří pěkně plynule a spojitě - ale nejsou plynulé a spojité vždycky, člověk si musí trochu pohrát s AnimationCurve u děr aby nebyly ostré přechody tam kde končí/začíná nějaká koule
             \item Další flexibilita se dá přidat přidáním dalších custom IRayIntersectables
